--- a/css/lgmobi.css
+++ b/css/lgmobi.css
@@ -24,10 +24,10 @@ body {
 	-webkit-box-shadow: 0 4px 10px rgba(15,8,65,0.3);
 	box-shadow: 0 4px 10px rgba(15,8,65,0.3);
 	background: #869EBF;
-    background: -moz-linear-gradient(top,  #869EBF 5%,#728BAD 60%); 
-    background: -webkit-linear-gradient(top,  #869EBF 5%,#728BAD 60%);
-    background: linear-gradient(to bottom,  #869EBF 5%,#728BAD 60%); 
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#869EBF', endColorstr='#728BAD',GradientType=0 ); 
+    background: -moz-linear-gradient(top,  #6E6767 30%,#4F4A4A 90%);
+    background: -webkit-linear-gradient(top,  #6E6767 30%,#4F4A4A 90%);
+    background: linear-gradient(to bottom,  #6E6767 30%,#4F4A4A 90%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6E6767', endColorstr='#4F4A4A',GradientType=0 );
 }
 
 
