--- a/css/boxstyle.css
+++ b/css/boxstyle.css
@@ -12,7 +12,7 @@ html {
     font-weight:400;
     font-size:1em;
     font-family:'Open Sans', sans-serif;
-    line-height:2em;
+    line-height:20px;
 }
 
 body {
@@ -129,7 +129,7 @@ img {
 @media all and (max-device-width: 320px){
 
     html {
-        line-height:1.2em;
+        line-height:20px;
     }
 
     .block {
@@ -142,7 +142,7 @@ img {
 		margin-top:5px;
         width:100%;
         border-collapse:collapse;
-        font-size:.875em;
+        font-size:.800em;
     }
 
     td a {
