--- a/css/lgmobi.css
+++ b/css/lgmobi.css
@@ -15,7 +15,7 @@ body {
     position: relative;
     clear: both;
     font-weight: bold;
-    font-size: 15px;
+    font-size: 12px;
     color: #FFFFFF;
     padding-right: 10px;
     padding-left: 10px;
@@ -24,9 +24,9 @@ body {
 	-webkit-box-shadow: 0 4px 10px rgba(15,8,65,0.3);
 	box-shadow: 0 4px 10px rgba(15,8,65,0.3);
 	background: #869EBF;
-    background: -moz-linear-gradient(top,  #6E6767 30%,#4F4A4A 90%);
-    background: -webkit-linear-gradient(top,  #6E6767 30%,#4F4A4A 90%);
-    background: linear-gradient(to bottom,  #6E6767 30%,#4F4A4A 90%);
+    background: -moz-linear-gradient(top,  #6E6767 1%,#4F4A4A 100%);
+    background: -webkit-linear-gradient(top,  #6E6767 1%,#4F4A4A 100%);
+    background: linear-gradient(to bottom,  #6E6767 1%,#4F4A4A 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6E6767', endColorstr='#4F4A4A',GradientType=0 );
 }
 
@@ -237,15 +237,22 @@ a.btn {
 }
 
 
+.folders {
+    text-align: right;
+
+}
+
 .floating-box {
+	position: relative;
     float: left;
-    margin: 12px;
     font-size: "3";
     font-family: "verdana";
     color: "#312D2D";
-    text-align: right;
-    
+    display: inline-block;
+    margin: auto 0.8em;
+    position: relative;
 }
+
 
 .userbutton {
     border-radius: 10%;
@@ -281,8 +288,8 @@ a.btn {
 
 img.expand { 
 	width: 80px; height: 80px;
-	-webkit-filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.3));
-    filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.3));
+	-webkit-filter: drop-shadow(3px 3px 3px rgba(0,0,0,0.4));
+    filter: drop-shadow(3px 3px 3px rgba(0,0,0,0.4));
 }
 
 
@@ -313,8 +320,8 @@ img.expand {
 
 
 .langtitle {
-    text-shadow: 0 1px 2px rgba(255,255,255,0.4);
-    font-size: 22px;
+    text-shadow: 0 1px 2px rgba(255,255,255,0.5);
+    font-size: 15px;
 }
 
 .footer {
