--- a/css/lg.css
+++ b/css/lg.css
@@ -189,6 +189,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 .tooltip1, .tooltip2{
     display: inline;
     position: relative;
+    border-radius: 5px;
 }
 
 
@@ -268,6 +269,21 @@ nav ul{
 	box-shadow: 0 10px 20px rgba(0,0,0,0.3);
 }
 
+
+
+.circle-count {
+    text-shadow: 1px 1px rgba(0,0,0,0.3);
+	position: relative;
+	vertical-align: middle;
+    left: -15px;
+    top: -32px;
+    z-index: 1000;
+    text-align: center;
+    font-weight: bold;
+    font-size: 12px;
+    color: rgba(215,215,215,0.7);
+    font-style: italic;
+}
 
 .feed-lists {
 	font-size: 14px;
