--- a/js/fancybox/jquery.fancybox-1.3.4.css
+++ b/js/fancybox/jquery.fancybox-1.3.4.css
@@ -288,8 +288,7 @@
 
 .fancybox-title-float {
 	position: absolute;
-	left: 0;
-	bottom: -20px;
+	top: -12px;
 	height: 32px;
 }
 
@@ -304,15 +303,16 @@
 	white-space: nowrap;
 }
 
+
 #fancybox-title-float-left {
 	padding: 0 0 0 15px;
 	background: url('fancybox.png') -40px -90px no-repeat;
 }
 
 #fancybox-title-float-main {
-	color: #FFF;
+	color: #BFC9BF;
 	line-height: 29px;
-	font-weight: bold;
+	font-weight: normal;
 	padding: 0 0 3px 0;
 	background: url('fancybox-x.png') 0px -40px;
 }
@@ -321,6 +321,7 @@
 	padding: 0 0 0 15px;
 	background: url('fancybox.png') -55px -90px no-repeat;
 }
+
 
 /* IE6 */
 
