--- a/css/home.css
+++ b/css/home.css
@@ -119,12 +119,18 @@ a:hover, a:active, a:focus {
 }
 
 
-.content ul, .content ol { 
+.content ul div, .content ol { 
     padding: 0 55px 15px 40px;
 }
 
 
 ul.nav {
+    list-style: none;
+    border-top: 1px solid #666;
+    margin-bottom: 15px;
+}
+
+div.nav {
     list-style: none;
     border-top: 1px solid #666;
     margin-bottom: 15px;
@@ -272,16 +278,16 @@ nav ul{
 
 
 .circle-count {
-    text-shadow: 1px 1px rgba(0,0,0,0.3);
+    text-shadow: 1px 1px rgba(0,0,0,0.4);
 	position: relative;
 	vertical-align: middle;
     left: -15px;
-    top: -32px;
+    top: -35px;
     z-index: 1000;
     text-align: center;
     font-weight: bold;
     font-size: 12px;
-    color: rgba(215,215,215,0.7);
+    color: rgba(215,215,215,0.9);
     font-style: italic;
 }
 
