--- a/css/box.css
+++ b/css/box.css
@@ -32,6 +32,12 @@ a:hover {
 }
 
 
+#box a:active {
+	position: relative;
+	top: 2px;
+	display: block;
+}
+
 #container {
     box-shadow: 0 5px 8px -px rgba(0,0,0,0.5);
     position: relative;
