--- a/css/apphome.css
+++ b/css/apphome.css
@@ -8,7 +8,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     color: #3D3D3D;
-    width: 100%
 }
 
 
@@ -64,6 +63,12 @@ body {
 	height: 0;
 	visibility: hidden;
 	clear: both;
+}
+
+#categories a:active , #categories a:focus{
+	position: relative;
+	top: 1px;
+	display: block;
 }
 
 ul, ol, dl {
@@ -256,7 +261,7 @@ a.btn {
     text-shadow: 1px 1px rgba(0,0,0,0.3);
 	position: relative;
 	vertical-align: middle;
-    left: -15px;
+    left: -8px;
     top: -32px;
     z-index: 1000;
     text-align: center;
@@ -264,11 +269,6 @@ a.btn {
     font-size: 12px;
     color: rgba(215,215,215,0.7);
     font-style: italic;
-}
-
-
-a {
-    display: block;
 }
 
 
