--- a/css/view.css
+++ b/css/view.css
@@ -5,48 +5,59 @@ h1,h2,p {
 
 body {
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#cdeeb1+26,d5fbbd+77,ddf7ca+97 */
-    background: #cdeeb1; /* Old browsers */
 /*
-    background: -moz-linear-gradient(top,#cdeeb1 16%,#d5fbbd 67%,#ddf7ca 87%); 
-    background: -webkit-linear-gradient(top,#cdeeb1 16%,#d5fbbd 67%,#ddf7ca 87%); 
-    background: linear-gradient(to bottom,#cdeeb1 16%,#d5fbbd 67%,#ddf7ca 87%); 
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cdeeb1', endColorstr='#ddf7ca',GradientType=0 );
+    background: #cdeeb1; /* Old browsers */
+*/
+    background: #F0ECEB; /* Old browsers */
+/*
+    background: -moz-linear-gradient(top,#ddf7ca 16%,#d5fbbd 30%,#cdeeb1 100%); 
+    background: -webkit-linear-gradient(top,#ddf7ca 16%,#d5fbbd 30%,#cdeeb1 100%); 
+    background: linear-gradient(to bottom,#ddf7ca 16%,#d5fbbd 30%,#cdeeb1 100%); 
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ddf7ca', endColorstr='#cdeeb1',GradientType=0 );
 */
 }
 
-div {
+div { 
     text-align: center;
 }
 
-.WordImage { 
-	width: 20%; height: auto;
-	border-radius: 5%;
-	border:3px solid white;
+.note{ 
+text-align: left;
 }
 
+.WordImage { 
+	width: 25%; height: 22%;
+	border-radius: 10px;
+	border:3px solid white;
+	-moz-box-shadow: 0 3px 2px rgba(0,0,0,0.1);
+	-webkit-box-shadow: 0 3px 2px rgba(0,0,0,0.1);
+	box-shadow: 0 3px 2px rgba(0,0,0,0.1);
+	transform-origin: 100% 0%;
+	-webkit-animation: fadeIn 0.2s ease-in-out;
+	animation: fadeIn 0.2s ease-in-out;
+}
 
 
 .exmp {
     font-family: 'verdana'; 
-    font-size: 18px;
-    font-size: 2.75vw;
+    font-size: 16px;
+    font-size: 2.15vw;
     color: #393939;
     padding-left: 20px;
     padding-right: 20px;
 }
 
 #trgt {
-
     margin: 10 auto;
-    width: 80%;
+    width: 90%;
     font-size: 16px;
     font-size: 2.25vw;
-    text-shadow: 0 0 50px #DDF7CA, 0 0 50px #DDF7CA;
+    text-shadow: 0 0 50px #E2FDCF, 0 0 50px #DDF7CA;
 }
 
 #srce {
     margin: 10 auto;
-    width: 80%;
+    width: 90%;
     font-size: 14px;
     font-size: 1.75vw;
 }
@@ -79,7 +90,7 @@ div {
     
 }
 
-.iconss {
+.FlashcardButtoms {
 	   text-align: center;
 	   position:absolute;
 	   width:100%;
@@ -88,6 +99,49 @@ div {
 	   
 	}
 	
+.pronounce {
+    text-decoration: none;
+	}
+	
+/*
+a>div { display: none; }
+a:hover>div { display: block; }
+*/
+
+	
+/*
+.pronounce h1:hover{
+	background-image: url(/images/listen.png);
+	background-repeat: no-repeat;
+	background-position: 100% -15%;
+    z-index: 1;
+}
+
+.pronounce h1{
+   display: block;
+}
+	
+*/
+
+#fscreen a:active {
+	position: relative;
+	top: 2px;
+	display: block;
+	background-image: url(/images/listen.png);
+	background-repeat: no-repeat;
+	background-position: 100% -15%;
+    z-index: 1;
+}
+
+#fscreen a:focus {
+	background: "#8AB365";
+
+}
+
+
+
+	
+/*
 @media all and (max-device-width: 720px){
 
     #trgt {
@@ -182,6 +236,7 @@ div {
 		padding-right: 10px;
 	}
 }
+*/
 
 a.cursor {cursor:hand;}
 
@@ -298,6 +353,101 @@ body > button {
   border-radius: 8px;
   transition: all 0.4s ease 0s;
 }
+
+
+
+
+.help-tip{
+	position: absolute;
+	top: 18px;
+	right: 18px;
+	text-align: center;
+	background-color: #BCDBEA;
+	border-radius: 50%;
+	width: 24px;
+	height: 24px;
+	font-size: 14px;
+	line-height: 26px;
+	cursor: default;
+}
+
+.help-tip:before{
+	content:'?';
+	font-weight: bold;
+	color:#fff;
+}
+
+.help-tip:hover p{
+	display:block;
+	transform-origin: 100% 0%;
+
+	-webkit-animation: fadeIn 0.3s ease-in-out;
+	animation: fadeIn 0.3s ease-in-out;
+
+}
+
+.help-tip p{	/* The tooltip */
+	display: none;
+	text-align: left;
+	background-color: #1E2021;
+	padding: 20px;
+	width: 300px;
+	position: absolute;
+	border-radius: 3px;
+	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+	right: -4px;
+	color: #FFF;
+	font-size: 13px;
+	line-height: 1.4;
+}
+
+.help-tip p:before{ /* The pointer of the tooltip */
+	position: absolute;
+	content: '';
+	width:0;
+	height: 0;
+	border:6px solid transparent;
+	border-bottom-color:#1E2021;
+	right:10px;
+	top:-12px;
+}
+
+.help-tip p:after{ /* Prevents the tooltip from being hidden */
+	width:100%;
+	height:40px;
+	content:'';
+	position: absolute;
+	top:-40px;
+	left:0;
+}
+
+/* CSS animation */
+
+@-webkit-keyframes fadeIn {
+	0% { 
+		opacity:0; 
+		transform: scale(0.6);
+	}
+
+	100% {
+		opacity:100%;
+		transform: scale(1);
+	}
+}
+
+@keyframes fadeIn {
+	0% { opacity:0; }
+	100% { opacity:100%; }
+}
+
+
+
+
+
+
+
+
+
 
 
 
