--- a/css/view.css
+++ b/css/view.css
@@ -12,7 +12,7 @@
     z-index: 100;
     width: 100vw;
     height: 100vh;
-    background-color: #cdeeb1;
+    background-color: #F0ECEB;
     background-image: url("/images/loading.gif");
     background-repeat: no-repeat;
 }
