--- a/css/view.css
+++ b/css/view.css
@@ -67,8 +67,9 @@ div {
     font-size: 14px;
     font-size: 2.00vw;
     color: #44513F;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10%;
+    padding-right: 10%;
+    text-align:center;
 }
 
 #trgt {
