--- a/css/home.css
+++ b/css/home.css
@@ -33,13 +33,24 @@ body {
 	border-bottom: 6px solid rgba(255,255,255,0.6);
 }
 
+#topLinks {
+	font-weight: bold;
+}
+
 .plus {
-	background: #E0F3DD;
-	border: 1px solid #91E37C;
-    border-radius: 4px;
-/*
-    color: #496940;
-*/
+	background: #FFFFFF;
+	border: 2px solid #A5BBD3;
+    border-radius: 10px;
+    margin: 5px;
+	-moz-box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+	-webkit-box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+	box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+	height:480px;
+}
+
+.SearchDiv {
+    margin: 5px;
+	min-height:100px;
 }
 
 
