--- a/css/home.css
+++ b/css/home.css
@@ -29,19 +29,19 @@ body {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6E6767', endColorstr='#4F4A4A',GradientType=0 );
 }
 
-#topLinks:hover {
-	border-bottom: 6px solid rgba(255,255,255,0.6);
+.topLinks:hover {
+	border-bottom: 8px solid rgba(255,255,255,0.6);
 }
 
-#topLinks {
+.topLinks {
 	font-weight: bold;
 }
 
 .plus {
-	background: #FFFFFF;
-	border: 2px solid #A5BBD3;
+	background: #F0ECEB;
+	border: 10px solid #FFFFFF;
     border-radius: 10px;
-    margin: 5px;
+    margin: 10px;
 	-moz-box-shadow: 0 5px 10px rgba(0,0,0,0.2);
 	-webkit-box-shadow: 0 5px 10px rgba(0,0,0,0.2);
 	box-shadow: 0 5px 10px rgba(0,0,0,0.2);
@@ -213,13 +213,22 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 
 .userbutton {
     padding: 8px;
-    font-size: 20px;
+    font-size: 15px;
+    color:#FFFFFF;
     left: 0px;
     top: 0px;
     bottom: 0px;
     vertical-align: middle;
-    font-weight: bold;
-    text-shadow: 0px 0px 2px #FFFFFF;
+    font-weight: normal;
+    text-decoration: none;
+}
+
+.userbutton a{
+    text-decoration: none;
+}
+
+.userbutton:hover{
+    text-decoration: underline;
 }
 
 html,body,div,span,center,img,a,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{
@@ -287,6 +296,11 @@ nav ul{
 	vertical-align:top;
 }
 
+.feed-lists a{
+    color:#414958;
+    text-decoration: none;
+}
+
 .fav-lists {
 	font-size: 13px;
 	position: relative;
@@ -300,6 +314,12 @@ nav ul{
 	font: Verdana, Arial, Helvetica, sans-serif;
 	vertical-align:top;
 }
+
+.fav-lists a{
+    color:#414958;
+    text-decoration: none;
+}
+
 
 .floating-box {
     float: left;
@@ -326,6 +346,11 @@ img.expand {
 .langtitle {
     font-size: 29px;
 	text-shadow: 0px 0px 15px #A1A8BB;
+	
+}
+
+.langtitle a {
+    text-decoration: none;
 }
 
 .sentenceweek {
