--- a/css/classic.css
+++ b/css/classic.css
@@ -107,7 +107,7 @@ div.footer {
 	border-left: 0px;
 	border-right: 0px;
 	height:55px;
-
+    font-size:6px;
     margin: 0 auto;
 	position: relative;
 	width: 1000px;
