--- a/css/view.css
+++ b/css/view.css
@@ -2,6 +2,7 @@
 #page {
     display: none;
     position: relative;
+    text-align:center;
 }
 
 #loading {
@@ -64,7 +65,7 @@ div {
 
 .exmp {
     font-family: 'verdana'; 
-    font-size: 14px;
+    font-size: 12px;
     font-size: 2.00vw;
     color: #44513F;
     padding-left: 10%;
@@ -77,7 +78,7 @@ div {
     width: 90%;
     font-size: 16px;
     font-size: 2.25vw;
-    text-shadow: 0 0 50px #E2FDCF, 0 0 50px #DDF7CA;
+    text-shadow: 0 0 30px #E2FDCF, 0 0 30px #DDF7CA;
 }
 
 #grmr {
@@ -85,7 +86,7 @@ div {
     width: 90%;
     font-size: 16px;
     font-size: 2.25vw;
-    text-shadow: 0 0 50px #E2FDCF, 0 0 50px #DDF7CA;
+    text-shadow: 0 0 30px #E2FDCF, 0 0 30px #DDF7CA;
 }
 
 #srce {
@@ -119,9 +120,10 @@ div {
 
 .flascards_info {
     font-size: 10px;
-    color: #2B6C43;
+    color: #6D9079;
     font-family: 'verdana', 'roboto'; 
     border-collapse: collapse;
+    font-weight: bold;
 }
 
 .viewer_info {
@@ -146,7 +148,7 @@ div {
     
 }
 
-.FlashcardButtoms {
+.QuizButtons {
 	   text-align: center;
 	   position:absolute;
 	   width:100%;
@@ -156,10 +158,10 @@ div {
 
 .ViewerButtons {
 	   text-align: center;
-	   position:absolute;
-	   width:100%;
-	   position:fixed;
+	   width:80%;
 	   vertical-align:bottom;
+       margin-left: auto;
+        margin-right: auto;
 	}
     
 .TestStartBtn {
@@ -309,29 +311,22 @@ a.cursor {cursor:hand;}
     right: 5%;
 }
 
-#Next {
-    position: fixed;
-    bottom: 15px;
-    right: 5%;
-}
+#ViewerButtons {
 
-#Play {
-    position: fixed;
-    bottom: 25px;
-    right: 50%;
-    left: 50%;
-    
-}
+    margin-left: auto;
+    margin-right: auto;
 
-#Back {
-    position: fixed;
-    bottom: 15px;
-    left: 5%;
 }
 
 body > button {
     background: #428BCA;
     transition: all 0.3s ease 0s;
+}
+
+.center {
+     position: fixed;
+    bottom: 15px;
+    width: 99%;
 }
 
 .btnShow {
@@ -425,7 +420,7 @@ body > button {
   font-weight: bold;
   color: #E6E6FA;
   background: #98ccfd;
-  width: 28%;
+  width: 100%;
   height: 50px;
   border-radius: 8px;
   border: 0px solid #436C2B;
@@ -439,19 +434,25 @@ body > button {
   color: #E6E6FA;
   background: #98ccfd;
   font-weight: bold;
-  width: 28%;
+  width: 100%;
   height: 50px;
   border: 0px;
   border-radius: 8px;
   transition: all 0.4s ease 0s;
+  
 }
 
 .btnPlay {
-  text-align: right;
   vertical-align: top;
   border-radius: 6px;
+  opacity: 0.5;
 }
 
+.btnPlay:hover {
+  vertical-align: top;
+  border-radius: 6px;
+  opacity: 1;
+}
 
 .btnBack {
   font-size: 15px;
@@ -460,7 +461,7 @@ body > button {
   font-weight: bold;
   color: #E6E6FA;
   background: #98ccfd;
-  width: 28%;
+  width: 100%;
   height: 50px;
   border: 0px solid #436C2B;
   border-radius: 8px;
@@ -474,14 +475,52 @@ body > button {
   color: #E6E6FA;
   background: #98ccfd;
   font-weight: bold;
-  width: 28%;
+  width: 100%;
   height: 50px;
   border: 0px;
   border-radius: 8px;
   transition: all 0.4s ease 0s;
 }
 
+.slidecontainer {
+  width: 100%;
+/*
+  bottom: 18%;
+  position: fixed;
+*/
+}
 
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 13px;
+  background: #BAEFFA;
+  outline: none;
+  opacity: 0.5;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 13px;
+  height: 13px;
+  background: #fff;
+  cursor: pointer;
+  opacity: 1;
+}
+
+.slider::-moz-range-thumb {
+  width: 13px;
+  height: 13px;
+  background: #BAEFFA;
+  cursor: pointer;
+}
 
 .help-tip{
 	position: absolute;
@@ -569,3 +608,5 @@ body > button {
 	0% { opacity:0; }
 	100% { opacity:100%; }
 }
+
+
