--- a/css/view.css
+++ b/css/view.css
@@ -86,15 +86,23 @@ div {
     width: 90%;
     font-size: 16px;
     font-size: 2.25vw;
-    text-shadow: 0 0 30px #E2FDCF, 0 0 30px #DDF7CA;
+    text-shadow: 0 0 1px #BACFF0, 0 0 1px #BACFF0;
 }
 
 #srce {
     margin: 10 auto;
-    width: 90%;
+    width: 80%;
     font-size: 14px;
     font-size: 1.75vw;
 }
+
+#v_srce {
+    margin: 10 auto;
+    width: 80%;
+    font-size: 14px;
+    font-size: 1.75vw;
+}
+
 
 #dots {
     margin: 0 auto;
@@ -158,7 +166,7 @@ div {
 
 .ViewerButtons {
 	   text-align: center;
-	   width:80%;
+	   width:60%;
 	   vertical-align:bottom;
        margin-left: auto;
         margin-right: auto;
@@ -324,7 +332,7 @@ body > button {
 }
 
 .center {
-     position: fixed;
+    position: fixed;
     bottom: 15px;
     width: 99%;
 }
@@ -445,7 +453,7 @@ body > button {
 .btnPlay {
   vertical-align: top;
   border-radius: 6px;
-  opacity: 0.5;
+  opacity: 0.7;
 }
 
 .btnPlay:hover {
@@ -496,7 +504,7 @@ body > button {
   height: 13px;
   background: #BAEFFA;
   outline: none;
-  opacity: 0.5;
+  opacity: 0.7;
   -webkit-transition: .2s;
   transition: opacity .2s;
 }
