--- a/css/view.css
+++ b/css/view.css
@@ -65,9 +65,7 @@ div {
 
 .exmp {
     font-family: 'verdana'; 
-    font-size: 12px;
-    font-size: 2.00vw;
-    color: #44513F;
+    color: #585D69;
     padding-left: 10%;
     padding-right: 10%;
     text-align:center;
