--- a/css/view.css
+++ b/css/view.css
@@ -24,6 +24,10 @@ h1,h2,p {
     font-weight: 100; 
 }
 
+h2 { 
+    font-style: italic;
+}
+
 body {
     background: #F0ECEB; /* Old browsers */
 }
